[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modaldemo"
version = "1.0.0"
description = "Modal Dialogs w/ PySide6"
requires-python = ">=3.12"
dependencies = ["PySide6>=6.10.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["modaldemo*"]
[project.scripts]
modaldemo = "modaldemo.app:main"
